[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-cache-engine"
version = "0.1.0"
description = "Engine-agnostic KV cache sharing for prompt prefix deduplication using radix tries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rajath John", email = "jrajath94@gmail.com"},
]
keywords = ["llm", "kv-cache", "prefix-caching", "inference", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.scripts]
prompt-cache = "prompt_cache_engine.cli:main"

[project.urls]
Homepage = "https://github.com/jrajath94/prompt-cache-engine"
Repository = "https://github.com/jrajath94/prompt-cache-engine.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/prompt_cache_engine"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true

[[tool.mypy.overrides]]
module = ["click"]
ignore_missing_imports = true
